--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.2
 click==8.2.0
 colorama==0.4.6
 Flask==3.1.0
+Flask-Cors==4.0.1
 google==3.0.0
 idna==3.10
 itsdangerous==2.2.0
